@@ -14,19 +14,19 @@
 #define __defined_libdai_config_h
 
 
-//#define DAI_WITH_BP
-//#define DAI_WITH_FBP
-//#define DAI_WITH_TRWBP
-//#define DAI_WITH_MF
-//#define DAI_WITH_HAK
-//#define DAI_WITH_LC
-//#define DAI_WITH_TREEEP
-//#define DAI_WITH_JTREE
-//#define DAI_WITH_MR
-//#define DAI_WITH_GIBBS
-//#define DAI_WITH_CBP
-//#define DAI_WITH_DECMAP
-//#define DAI_WITH_GLC
+#define DAI_WITH_BP
+#define DAI_WITH_FBP
+#define DAI_WITH_TRWBP
+#define DAI_WITH_MF
+#define DAI_WITH_HAK
+#define DAI_WITH_LC
+#define DAI_WITH_TREEEP
+#define DAI_WITH_JTREE
+#define DAI_WITH_MR
+#define DAI_WITH_GIBBS
+#define DAI_WITH_CBP
+#define DAI_WITH_DECMAP
+#define DAI_WITH_GLC
 
 
 #endif
